# TECHONOLOGY-tec-development

__archive__/python/: .env  env-file-generate.sh
ai-agent/.claude-plugin/: marketplace.json
ai-agent/bgi-tools/.claude-plugin/: plugin.json
ai-agent/bgi-tools/skills/bgi-bastion/: SKILL.md  package-lock.json
demo/cpp-demo-cmake01/: CMakeLists.txt  Main.cpp  Main.h
demo/java-demo-design-pattern/: build.gradle  gradle.properties  settings.gradle
demo/java-demo-spring-boot-aop/: build.gradle  settings.gradle
demo/java-demo-spring-cloud01/: .gitignore  __readme.md  pom.xml
demo/java-demo-spring-cloud01/sscd01-common/: pom.xml
demo/java-demo-spring-cloud01/sscd01-gateway/: pom.xml
demo/java-demo-spring-cloud01/sscd01-order/: pom.xml
demo/java-demo-spring-cloud01/sscd01-user/: pom.xml
demo/python-demo-algorithm/search/: BreadthFirstSearch.py  DijkstraAlgorithm.py
demo/python-demo-algorithm/sort/: QuickSort.py  SelectionSort.py
demo/sql-demo-noname01/: stu-sql-demo01-query.sql  stu-sql-demo01.sql
python/python-util-image/: generate-ai-image.py
python/python-util-renamer/: rename-with-prefix.py
python/python-util-rvf-processor/: JpgExtractHelper.py
python/python-util-weread-book-shelf/: WereadBookShelf.py
tyz-ai-agent-tools/.claude-plugin/: marketplace.json
tyz-ai-agent-tools/bgi/.claude-plugin/: plugin.json
utilities/: create-tem-links.ps1
utilities/ai-image/: generate-ai-image-web.py
utilities/renamer/: rename-random-md5.ps1
utilities/rvf-processor/: FileUtils.py  JpgToPdfHelper.py  RvfExtractHelper.py
(+239 files in other folders)
